--- a/Pear/Controllers/New Redesign/Create User/Boast Roast Input/ProfileInputBoastRoastViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Boast Roast Input/ProfileInputBoastRoastViewController.storyboard
@@ -32,8 +32,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IIs-kj-SEt">
                                 <rect key="frame" x="0.0" y="56" width="414" height="40"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer some questions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Vzw-TY-4an">
-                                        <rect key="frame" x="126.5" y="10" width="161" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step 3: The final touch" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Vzw-TY-4an">
+                                        <rect key="frame" x="132" y="10" width="150.5" height="20.5"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -69,18 +69,23 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
                                 <state key="normal" title="add one more"/>
+                                <connections>
+                                    <action selector="addMoreButtonClicked:" destination="ldV-yO-okM" eventType="touchUpInside" id="Jia-JD-ywR"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YqV-YO-5Ha">
                                 <rect key="frame" x="20" y="792" width="374" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="fTP-IK-6ct"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="mGE-Zd-z7e"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
                                 <state key="normal" title="I'm done, continue!"/>
+                                <connections>
+                                    <action selector="continueButtonClicked:" destination="ldV-yO-okM" eventType="touchUpInside" id="9dE-Wf-Ekb"/>
+                                </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c8A-Tp-dBu">
-                                <rect key="frame" x="0.0" y="155" width="414" height="563"/>
+                                <rect key="frame" x="0.0" y="169" width="414" height="549"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tPy-0f-vZT">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
@@ -140,6 +145,12 @@
                                     <constraint firstAttribute="trailing" secondItem="WpL-Yn-LaZ" secondAttribute="trailing" constant="12" id="hHn-G9-7G9"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p94-0o-7HO">
+                                <rect key="frame" x="20" y="159" width="374" height="0.0"/>
+                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -149,14 +160,18 @@
                             <constraint firstItem="rC9-8v-Ov0" firstAttribute="top" secondItem="c8A-Tp-dBu" secondAttribute="bottom" constant="12" id="99U-cv-ULH"/>
                             <constraint firstItem="Q43-OX-5Ne" firstAttribute="leading" secondItem="qah-yF-tAi" secondAttribute="leading" id="9ue-1s-VOm"/>
                             <constraint firstItem="IIs-kj-SEt" firstAttribute="leading" secondItem="qah-yF-tAi" secondAttribute="leading" id="Clg-Tc-fiv"/>
+                            <constraint firstItem="p94-0o-7HO" firstAttribute="leading" secondItem="qah-yF-tAi" secondAttribute="leading" constant="20" id="DGo-tp-Zxo"/>
+                            <constraint firstItem="qah-yF-tAi" firstAttribute="trailing" secondItem="p94-0o-7HO" secondAttribute="trailing" constant="20" id="KFa-vN-Wnn"/>
                             <constraint firstItem="c8A-Tp-dBu" firstAttribute="leading" secondItem="qah-yF-tAi" secondAttribute="leading" id="LFD-09-54B"/>
                             <constraint firstItem="qah-yF-tAi" firstAttribute="trailing" secondItem="EWg-Wa-Jnu" secondAttribute="trailing" id="O4U-7V-aBa"/>
                             <constraint firstItem="qah-yF-tAi" firstAttribute="trailing" secondItem="IIs-kj-SEt" secondAttribute="trailing" id="Otf-mt-mjn"/>
+                            <constraint firstItem="c8A-Tp-dBu" firstAttribute="top" secondItem="p94-0o-7HO" secondAttribute="bottom" constant="10" id="RBb-pN-Zgm"/>
                             <constraint firstItem="qah-yF-tAi" firstAttribute="trailing" secondItem="YqV-YO-5Ha" secondAttribute="trailing" constant="20" id="Tyq-04-AXd"/>
                             <constraint firstItem="qah-yF-tAi" firstAttribute="bottom" secondItem="YqV-YO-5Ha" secondAttribute="bottom" constant="20" id="V4y-as-hY4"/>
-                            <constraint firstItem="c8A-Tp-dBu" firstAttribute="top" secondItem="Q43-OX-5Ne" secondAttribute="bottom" id="Wku-GC-L8S"/>
                             <constraint firstItem="YqV-YO-5Ha" firstAttribute="leading" secondItem="GRc-mv-xn8" secondAttribute="leading" constant="20" id="X1U-1X-geE"/>
+                            <constraint firstItem="p94-0o-7HO" firstAttribute="top" secondItem="Q43-OX-5Ne" secondAttribute="bottom" constant="4" id="Z4T-k4-uvq"/>
                             <constraint firstItem="IIs-kj-SEt" firstAttribute="top" secondItem="qah-yF-tAi" secondAttribute="top" constant="12" id="ZpU-v9-5sG"/>
+                            <constraint firstItem="p94-0o-7HO" firstAttribute="centerX" secondItem="qah-yF-tAi" secondAttribute="centerX" id="aVV-CH-RXG"/>
                             <constraint firstItem="EWg-Wa-Jnu" firstAttribute="centerX" secondItem="qah-yF-tAi" secondAttribute="centerX" id="cqh-8s-Cru"/>
                             <constraint firstItem="EWg-Wa-Jnu" firstAttribute="top" secondItem="IIs-kj-SEt" secondAttribute="bottom" constant="8" id="g70-uh-tnm"/>
                             <constraint firstItem="YqV-YO-5Ha" firstAttribute="top" secondItem="rC9-8v-Ov0" secondAttribute="bottom" constant="12" id="hTy-Cy-iFT"/>
@@ -167,10 +182,14 @@
                         <viewLayoutGuide key="safeArea" id="qah-yF-tAi"/>
                     </view>
                     <connections>
+                        <outlet property="addMoreButton" destination="rC9-8v-Ov0" id="0m4-Hg-nua"/>
                         <outlet property="boastButton" destination="eUx-lK-pkS" id="buA-Nl-yZW"/>
+                        <outlet property="continueButton" destination="YqV-YO-5Ha" id="Gtx-lq-yuU"/>
                         <outlet property="doneButtonBottomConstraint" destination="V4y-as-hY4" id="27U-gf-lNy"/>
                         <outlet property="roastButton" destination="WpL-Yn-LaZ" id="izV-4C-mnR"/>
+                        <outlet property="scrollView" destination="c8A-Tp-dBu" id="Xtl-51-hJw"/>
                         <outlet property="stackView" destination="tPy-0f-vZT" id="dIT-YG-vWD"/>
+                        <outlet property="subtitleLabel" destination="p94-0o-7HO" id="OaO-bJ-XcI"/>
                         <outlet property="titleLabel" destination="Vzw-TY-4an" id="mSs-dI-i6U"/>
                     </connections>
                 </viewController>
