--- a/Pear/Controllers/New Redesign/Create User/Enable Contact Permissions/UserContactPermissionsViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Enable Contact Permissions/UserContactPermissionsViewController.storyboard
@@ -32,8 +32,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rzM-ko-2ks">
                                 <rect key="frame" x="0.0" y="56" width="414" height="40"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please allow access" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="egO-Y0-AmT">
-                                        <rect key="frame" x="83.5" y="0.5" width="247" height="39"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Join in 3 steps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="egO-Y0-AmT">
+                                        <rect key="frame" x="119" y="0.5" width="176" height="39"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
