--- a/Pear/Controllers/New Redesign/Create User/Input Question/ProfileInputQuestionViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Input Question/ProfileInputQuestionViewController.storyboard
@@ -32,8 +32,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SZK-sq-Ztp">
                                 <rect key="frame" x="0.0" y="56" width="414" height="40"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step 2: Answer some questions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="mdX-eM-L9H">
-                                        <rect key="frame" x="100.5" y="9.5" width="213" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Step 2: Answer some questions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="mdX-eM-L9H">
+                                        <rect key="frame" x="101" y="9.5" width="212.5" height="21"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -47,22 +47,23 @@
                                         <state key="normal" image="icon-cancel-button"/>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hYn-6f-O3M">
-                                        <rect key="frame" x="367" y="2.5" width="35" height="35"/>
+                                        <rect key="frame" x="371" y="2.5" width="35" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="hYn-6f-O3M" secondAttribute="height" multiplier="1:1" id="Q8u-qY-Eip"/>
                                             <constraint firstAttribute="width" constant="35" id="aoA-9B-5Sv"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBv-Qg-K3y">
-                                        <rect key="frame" x="363" y="20" width="0.0" height="0.0"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBv-Qg-K3y">
+                                        <rect key="frame" x="356" y="7.5" width="11" height="25"/>
                                         <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="18"/>
                                         <color key="textColor" red="0.80000000000000004" green="1" blue="0.56470588235294117" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="hYn-6f-O3M" secondAttribute="trailing" constant="12" id="0rX-yK-uf2"/>
+                                    <constraint firstAttribute="trailing" secondItem="hYn-6f-O3M" secondAttribute="trailing" constant="8" id="0rX-yK-uf2"/>
                                     <constraint firstItem="hYn-6f-O3M" firstAttribute="centerY" secondItem="mdX-eM-L9H" secondAttribute="centerY" id="6fY-tX-fWb"/>
+                                    <constraint firstItem="GBv-Qg-K3y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="mdX-eM-L9H" secondAttribute="trailing" constant="4" id="6pd-w1-i1g"/>
                                     <constraint firstItem="hYn-6f-O3M" firstAttribute="leading" secondItem="GBv-Qg-K3y" secondAttribute="trailing" constant="4" id="RrD-Jc-Wtn"/>
                                     <constraint firstAttribute="height" constant="40" id="U9V-Ic-nxj"/>
                                     <constraint firstItem="mdX-eM-L9H" firstAttribute="centerY" secondItem="SZK-sq-Ztp" secondAttribute="centerY" id="WFS-07-KPg"/>
