--- a/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
@@ -89,22 +89,23 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="414" height="527"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yJ5-QD-sik">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vc6-NB-PS8">
-                                                                            <rect key="frame" x="10" y="0.0" width="50" height="50"/>
+                                                                            <rect key="frame" x="10" y="7.6666666666666679" width="45" height="45"/>
                                                                             <constraints>
+                                                                                <constraint firstAttribute="width" constant="45" id="0dc-WC-SG6"/>
                                                                                 <constraint firstAttribute="width" secondItem="Vc6-NB-PS8" secondAttribute="height" multiplier="1:1" id="m2D-7f-hwW"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Fs-5i-Wee">
-                                                                            <rect key="frame" x="68" y="4" width="292" height="0.0"/>
-                                                                            <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="12"/>
+                                                                            <rect key="frame" x="63" y="4" width="287" height="0.0"/>
+                                                                            <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="15"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qtg-2G-xfh">
-                                                                            <rect key="frame" x="368" y="4" width="42" height="42"/>
+                                                                            <rect key="frame" x="358" y="4" width="52" height="52"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" secondItem="Qtg-2G-xfh" secondAttribute="height" multiplier="1:1" id="7fB-nV-3Jn"/>
                                                                             </constraints>
@@ -114,7 +115,7 @@
                                                                             </connections>
                                                                         </button>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L97-yG-mgo">
-                                                                            <rect key="frame" x="68" y="8" width="292" height="38"/>
+                                                                            <rect key="frame" x="63" y="8" width="287" height="44"/>
                                                                         </stackView>
                                                                     </subviews>
                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -127,20 +128,19 @@
                                                                         <constraint firstItem="Qtg-2G-xfh" firstAttribute="top" secondItem="yJ5-QD-sik" secondAttribute="top" constant="4" id="UrD-yo-BFe"/>
                                                                         <constraint firstItem="8Fs-5i-Wee" firstAttribute="leading" secondItem="Vc6-NB-PS8" secondAttribute="trailing" constant="8" id="Wwr-sT-euV"/>
                                                                         <constraint firstAttribute="trailing" secondItem="Qtg-2G-xfh" secondAttribute="trailing" constant="4" id="cCw-p7-4AX"/>
-                                                                        <constraint firstAttribute="height" constant="50" id="m7b-eu-3sj"/>
-                                                                        <constraint firstItem="Vc6-NB-PS8" firstAttribute="height" secondItem="yJ5-QD-sik" secondAttribute="height" id="mNF-Di-Efv"/>
+                                                                        <constraint firstAttribute="height" constant="60" id="m7b-eu-3sj"/>
                                                                         <constraint firstItem="Vc6-NB-PS8" firstAttribute="leading" secondItem="yJ5-QD-sik" secondAttribute="leading" constant="10" id="nZ8-el-fu4"/>
-                                                                        <constraint firstAttribute="bottom" secondItem="L97-yG-mgo" secondAttribute="bottom" constant="4" id="oNd-ZD-h92"/>
+                                                                        <constraint firstAttribute="bottom" secondItem="L97-yG-mgo" secondAttribute="bottom" constant="8" id="oNd-ZD-h92"/>
                                                                         <constraint firstItem="Qtg-2G-xfh" firstAttribute="leading" secondItem="8Fs-5i-Wee" secondAttribute="trailing" constant="8" id="oP6-sR-7bX"/>
                                                                         <constraint firstItem="L97-yG-mgo" firstAttribute="leading" secondItem="Vc6-NB-PS8" secondAttribute="trailing" constant="8" id="sug-Pp-XBI"/>
                                                                         <constraint firstItem="Vc6-NB-PS8" firstAttribute="centerY" secondItem="yJ5-QD-sik" secondAttribute="centerY" id="zpg-AB-bQt"/>
                                                                     </constraints>
                                                                 </view>
                                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q7W-QE-sEt">
-                                                                    <rect key="frame" x="0.0" y="50" width="414" height="457"/>
+                                                                    <rect key="frame" x="0.0" y="60" width="414" height="447"/>
                                                                     <subviews>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bs0-dn-sZv">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="457"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="447"/>
                                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         </view>
                                                                     </subviews>
@@ -193,8 +193,10 @@
                                             <outlet property="extraInfoStackView" destination="L97-yG-mgo" id="lI5-8Q-Aol"/>
                                             <outlet property="imageScrollView" destination="q7W-QE-sEt" id="qTk-SH-fCt"/>
                                             <outlet property="nameLabel" destination="8Fs-5i-Wee" id="qBY-NB-eqs"/>
+                                            <outlet property="profileStackView" destination="t0S-cF-KdZ" id="cON-YV-WoI"/>
                                             <outlet property="scrollViewContentView" destination="bs0-dn-sZv" id="a0n-xD-yhk"/>
                                             <outlet property="vibeImageView" destination="Vc6-NB-PS8" id="wGR-cv-3k7"/>
+                                            <outlet property="vibeImageWidthConstraint" destination="0dc-WC-SG6" id="OTu-1x-7YP"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
