--- a/Pear/Controllers/Profiles/Profile Boast Roast/ProfileBoastRoastViewController.storyboard
+++ b/Pear/Controllers/Profiles/Profile Boast Roast/ProfileBoastRoastViewController.storyboard
@@ -13,6 +13,9 @@
         <array key="OpenSans-Bold.ttf">
             <string>OpenSans-Bold</string>
         </array>
+        <array key="OpenSans-Regular.ttf">
+            <string>OpenSans-Regular</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Profile Boast Roast View Controller-->
@@ -24,34 +27,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xOx-j8-LM1">
-                                <rect key="frame" x="10" y="10" width="60" height="60"/>
+                                <rect key="frame" x="10" y="10" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="xOx-j8-LM1" secondAttribute="height" multiplier="1:1" id="4yo-yG-25H"/>
-                                    <constraint firstAttribute="width" constant="60" id="8Gk-tJ-ttp"/>
+                                    <constraint firstAttribute="width" constant="40" id="8Gk-tJ-ttp"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYO-As-Hbv">
-                                <rect key="frame" x="78" y="12" width="328" height="0.0"/>
-                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="iYO-As-Hbv">
+                                <rect key="frame" x="58" y="4" width="348" height="0.0"/>
+                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TQP-hj-Dcv">
-                                <rect key="frame" x="78" y="24" width="328" height="168"/>
-                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
-                                <color key="textColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TQP-hj-Dcv">
+                                <rect key="frame" x="58" y="8" width="348" height="188"/>
+                                <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="iYO-As-Hbv" firstAttribute="top" secondItem="ME1-Kq-Nox" secondAttribute="top" constant="12" id="2rL-EF-V5H"/>
-                            <constraint firstItem="TQP-hj-Dcv" firstAttribute="top" secondItem="iYO-As-Hbv" secondAttribute="bottom" constant="12" id="4Bs-zn-ktW"/>
+                            <constraint firstItem="iYO-As-Hbv" firstAttribute="top" secondItem="ME1-Kq-Nox" secondAttribute="top" constant="4" id="2rL-EF-V5H"/>
+                            <constraint firstItem="TQP-hj-Dcv" firstAttribute="top" secondItem="iYO-As-Hbv" secondAttribute="bottom" priority="900" constant="4" id="4Bs-zn-ktW"/>
                             <constraint firstItem="TQP-hj-Dcv" firstAttribute="leading" secondItem="iYO-As-Hbv" secondAttribute="leading" id="5r4-Z1-nFi"/>
                             <constraint firstItem="xOx-j8-LM1" firstAttribute="leading" secondItem="ME1-Kq-Nox" secondAttribute="leading" constant="10" id="DNq-JI-kJ6"/>
                             <constraint firstItem="iYO-As-Hbv" firstAttribute="leading" secondItem="xOx-j8-LM1" secondAttribute="trailing" constant="8" id="acy-Bf-KzZ"/>
                             <constraint firstItem="TQP-hj-Dcv" firstAttribute="trailing" secondItem="iYO-As-Hbv" secondAttribute="trailing" id="ajT-eB-I1Y"/>
-                            <constraint firstItem="ME1-Kq-Nox" firstAttribute="bottom" secondItem="TQP-hj-Dcv" secondAttribute="bottom" constant="8" id="f0t-bs-a4O"/>
+                            <constraint firstItem="ME1-Kq-Nox" firstAttribute="bottom" secondItem="TQP-hj-Dcv" secondAttribute="bottom" constant="4" id="f0t-bs-a4O"/>
                             <constraint firstItem="xOx-j8-LM1" firstAttribute="top" secondItem="ME1-Kq-Nox" secondAttribute="top" constant="10" id="rtT-v6-pvO"/>
                             <constraint firstItem="ME1-Kq-Nox" firstAttribute="trailing" secondItem="iYO-As-Hbv" secondAttribute="trailing" constant="8" id="xZO-lu-osW"/>
                         </constraints>
